ghc-4335c07/testsuite/tests/typecheck/should_compile/tc268.hs
{-# LANGUAGE KindSignatures #-}
{-# LANGUAGE ConstraintKinds #-}
module Tc268 where
import GHC.Exts
type A = (() :: Constraint)
