ghc-4335c07/testsuite/tests/typecheck/should_fail/T6018Dfail.hs
{-# LANGUAGE TypeFamilies #-}

module T6018Dfail where

import T6018Bfail

type instance H Bool Int  Char = Int
